Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8440

(/srv/buildbot_cmake/full_cmake/build/boot/freeldr/freeldr/arch/i386/hwpci.c:53) err: Invalid routing table

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • None
    • None
    • None

    Description

      (/srv/buildbot_cmake/full_cmake/build/boot/freeldr/freeldr/arch/i386/hwpci.c:53) err: Invalid routing table

      livecd-63877-dbg

      for hardware specs see CORE-8359

      Attachments

        Issue Links

          Activity

            People

              bug zilla Bug Zilla
              Jedi-to-be Jedi-to-be
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: