[FREELDR] - Improve GetPciIrqRoutingTable. Patch by Sergey Chernov (serrox at ya dot ru), small modifications by me. CORE-8440

svn path=/trunk/; revision=63985